package original.api.general;

public interface Calories {
    double calories_pour_100g();
}
