package original.api.general;

public enum Proteine {
    MEAT,FISH,CHICKEN
}
