package original.api.general;

public enum TailleProteine {
    SMALL,WAY,LARGE;
}
