@startuml

title __TD1's Class Diagram__\n

  namespace original.Restaurant {
    class original.Restaurant.Commande {
    }
  }
  

  namespace original.api.general {
    interface original.api.general.Calories {
    }
  }
  

  namespace original.api.general {
    interface original.api.general.FoodProduct {
    }
  }
  

  namespace original.api.general {
    class original.api.general.MenuBurger {
    }
  }
  

  namespace original.api.general {
    enum Proteine {
    }
  }
  

  namespace original.api.general {
    enum TailleProteine {
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.Burger {
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.Cheddar {
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.DeepFriedOnions {
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.Meat {
    }
  }
  

  namespace td1.original.api.general {
    interface td1.original.api.general.Product {
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.Sauce {
    }
  }
  

  namespace td1.original.api.general {
    class td1.original.api.general.Tomato {
    }
  }
  

  namespace td1.original.client {
    class td1.original.client.App {
    }
  }
  

  original.api.general.MenuBurger o-- td1.original.api.general.Sauce.SauceType : sauce
  td1.original.api.general.Burger .up.|> Product
  td1.original.api.general.Burger .up.|> original.api.general.Calories
  td1.original.api.general.Burger .up.|> original.api.general.FoodProduct
  td1.original.api.general.Cheddar .up.|> Product
  td1.original.api.general.Cheddar .up.|> original.api.general.Calories
  td1.original.api.general.DeepFriedOnions .up.|> Product
  td1.original.api.general.Meat .up.|> Product
  td1.original.api.general.Meat o-- td1.original.api.general.Meat.MeatType : type
  td1.original.api.general.Sauce .up.|> Product
  td1.original.api.general.Sauce o-- td1.original.api.general.Sauce.SauceType : type
  td1.original.api.general.Tomato .up.|> Product


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
